@@ -1,3 +1,6 @@
+<h5>1.1.0 Stable</h5>  [2023/02/28]
+ - moved to last stable with smarty 2 (goffy)
+
 <h5>1.1.0 RC 1  NOT RELEASED</h5>  [2021/../..]
  - semantic versioning (goffy)
  - update to php8 (goffy)
